--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,12 @@
             <artifactId>liquibase-maven-plugin</artifactId>
             <version>3.8.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.6.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
