--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mihey</groupId>
-    <artifactId>CrudCosoleProject</artifactId>
+    <artifactId>CrudConsoleProject</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
