--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-datasource.url=
-datasource.username='admin'
-datasource.password='admin'
+datasource.url="jdbc:mysql://localhost/PostService?serverTimezone=Europe/Moscow"
+datasource.username="admin"
+datasource.password="admin"
